@@ -21,6 +21,7 @@ meta-spec:
 name: Pod-Example
 no_index:
   directory:
+    - examples
     - inc
     - t
 requires:
