@@ -1,0 +1,14 @@
+#!/usr/bin/env perl
+
+# Pragmas.
+use strict;
+use warnings;
+
+# Modules.
+use Pod::Example qw(get);
+
+# Get and print code.
+print get('Pod::Example')."\n";
+
+# Output:
+# This example.
