@@ -1,6 +1,7 @@
 0.03
 - New version of build system.
 - Implement sections() subroutine.
+- Add examples/directory.
 
 0.02 (August 1, 2011)
 - Add check for noexistent Perl module. Add test for it.
